--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -15,7 +15,18 @@
     </HBox>
     <TableView editable="true" fx:id="table" maxWidth="Infinity" minWidth="60" maxHeight="Infinity" VBox.vgrow="ALWAYS">
         <placeholder>
-            <Button text="%import" onAction="#importModel"/>
+            <VBox alignment="BASELINE_CENTER" fx:id="dragDropPlaceholder"
+                  onDragOver="#dragOverHandle" onDragDropped="#dragDropHandle">
+                <HBox alignment="BASELINE_CENTER" style="-fx-padding: 20;" VBox.vgrow="NEVER">
+                    <VBox alignment="BASELINE_CENTER">
+                        <Button text="%import" onAction="#importModel"/>
+                        <Label text="(*.MOD)"  style="-fx-font-size: 12; -fx-text-fill: Gray; -fx-padding: 5;"/>
+                    </VBox>
+                </HBox>
+                <HBox alignment="BASELINE_CENTER" style="-fx-padding: 20;" VBox.vgrow="NEVER">
+                    <Label text="%drag"/>
+                </HBox>
+            </VBox>
         </placeholder>
         <columns>
             <TableColumn fx:id="indexCol" maxWidth="35" prefWidth="35" sortable="false" text="N"
