--- a/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.css
@@ -6,7 +6,7 @@
     -fx-padding: 20px;
 }
 
-.list-cell {
-    -fx-pref-height: 40;
-    -fx-font-size: 16;
-}
+/*.list-cell {*/
+/*    -fx-pref-height: 40;*/
+/*    -fx-font-size: 16;*/
+/*}*/
