--- a/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.fxml
@@ -6,30 +6,25 @@
 <?import javafx.scene.layout.*?>
 <VBox fx:id="root" xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      prefHeight="400.0" prefWidth="600.0"
-      stylesheets="@../common.css, @NoFileScreen.css" style="-fx-background-color: white"
+      stylesheets="@../common.css, @NoFileScreen.css"
       fx:controller="ru.nucodelabs.gem.view.main.NoFileScreenController"
-      onDragOver="#dragOverHandle" onDragDropped="#dragDropHandle">
+      onDragOver="#dragOverHandle" onDragDropped="#dragDropHandle"
+      maxWidth="Infinity" maxHeight="Infinity">
     <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS" alignment="CENTER">
-        <VBox alignment="CENTER" maxWidth="Infinity" maxHeight="Infinity">
+        <VBox maxWidth="Infinity" maxHeight="Infinity" spacing="10" HBox.hgrow="ALWAYS">
             <ImageView fitHeight="100" fitWidth="100">
                 <Image url="/img/gem.png"/>
             </ImageView>
             <Label style="-fx-text-fill: DarkGray" text="%version"/>
-            <Label VBox.vgrow="ALWAYS"
-                   style="-fx-font-weight: bold; -fx-font-size: 22pt;" text="%noFileTitle"/>
-            <HBox styleClass="textContainer">
-                <Label text="%noFileText"/>
-            </HBox>
-            <Button text="%openSection" defaultButton="true" onAction="#openSection"/>
-            <HBox maxHeight="10" prefHeight="10"/>
-            <Button text="%openEXPFile" onAction="#importEXP"/>
-            <HBox styleClass="textContainer" alignment="BASELINE_CENTER">
-                <Label text="%drag"/>
-            </HBox>
+            <Label style="-fx-font-weight: bold; -fx-font-size: 22pt;" text="%noFileTitle"/>
+            <Label text="%noFileText"/>
+            <VBox VBox.vgrow="ALWAYS"/>
+            <Button styleClass="action_button" text="%openSection" defaultButton="true" onAction="#openSection"/>
+            <Button styleClass="action_button" text="%openEXPFile" onAction="#importEXP"/>
+            <Label text="%drag"/>
         </VBox>
         <VBox HBox.hgrow="ALWAYS" style="-fx-padding: 20" fx:id="recentFilesContainer">
-            <HBox alignment="CENTER">
+            <HBox alignment="CENTER_LEFT">
                 <Label text="%recentFiles" style="-fx-font-size: 22pt;"/>
                 <HBox maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
                 <Button text="%clear" onAction="#clearRecentFiles"/>
