--- a/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.css
@@ -1,9 +1,14 @@
-.root {
+#root {
+    -fx-padding: 50;
     -fx-background-color: White;
+    /*-fx-background-image: url('../../../../../img/bg.jpeg');*/
+    /*-fx-background-size: 100%;*/
+    /*-fx-background-repeat: no-repeat;*/
 }
 
-.textContainer {
-    -fx-padding: 20px;
+.action_button {
+    -fx-pref-width: 150;
+    -fx-pref-height: 50;
 }
 
 /*.list-cell {*/
