--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       alignment="CENTER"
@@ -11,7 +13,13 @@
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.tables.ModelTableController">
     <HBox alignment="CENTER_LEFT" maxWidth="Infinity" style="-fx-padding: 5" HBox.hgrow="ALWAYS">
-        <Button fx:id="deleteBtn" text="Удалить выбранное" onAction="#deleteSelected" disable="true"/>
+        <Button fx:id="deleteBtn" text="Удалить выбранное" onAction="#deleteSelected" disable="true">
+            <graphic>
+                <ImageView fitHeight="15" fitWidth="15">
+                    <Image url="@../../../../../img/ui_icons/backspace/2x/round_backspace_black_24dp.png"/>
+                </ImageView>
+            </graphic>
+        </Button>
     </HBox>
     <TableView editable="true" fx:id="table" maxWidth="Infinity" minWidth="60" maxHeight="Infinity" VBox.vgrow="ALWAYS">
         <placeholder>
@@ -74,7 +82,13 @@
                        maxWidth="Infinity"/>
         </VBox>
         <VBox style="-fx-padding: 5">
-            <Button fx:id="addBtn" text="Добавить слой" onAction="#addLayer" minWidth="150" disable="true"/>
+            <Button fx:id="addBtn" text="Добавить слой" onAction="#addLayer" minWidth="150" disable="true">
+                <graphic>
+                    <ImageView fitWidth="15" fitHeight="15">
+                        <Image url="@../../../../../img/ui_icons/add/2x/round_add_black_24dp.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
         </VBox>
     </HBox>
 </VBox>
