--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -86,6 +86,11 @@
 
 .table-view {
     -fx-font-size: 16;
+    -fx-background-color: white;
+}
+
+.list-view {
+    -fx-background-color: white;
 }
 
 .table-view:focused {
