--- a/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.css
@@ -12,6 +12,11 @@
     -fx-font-size: 16;
 }
 
+#recentFiles .list-cell {
+    -fx-pref-height: 40;
+    -fx-font-size: 16;
+}
+
 /*.list-cell {*/
 /*    -fx-pref-height: 40;*/
 /*    -fx-font-size: 16;*/
