--- a/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
@@ -16,15 +16,15 @@
     <HBox prefHeight="300" prefWidth="-Infinity" minWidth="-Infinity" minHeight="20">
         <StackedBarChart fx:id="sectionStackedBarChart" minHeight="20"
                          minWidth="-Infinity" prefWidth="-Infinity"
-                         maxHeight="-Infinity" prefHeight="300">
+                         maxHeight="-Infinity" prefHeight="300" >
             <xAxis>
-                <CategoryAxis fx:id="sectionStackedBarChartXAxis" label="%sectionX"
-                              side="TOP" autoRanging="false">
+                <CategoryAxis fx:id="categoryAxis" label="%sectionX"
+                              side="TOP">
                 </CategoryAxis>
             </xAxis>
             <yAxis>
-                <NumberAxis fx:id="sectionStackedBarChartYAxis" forceZeroInRange="false"
-                            label="%sectionY" side="LEFT" tickUnit="10.0" upperBound="400">
+                <NumberAxis fx:id="numberAxis" forceZeroInRange="false"
+                            label="%sectionY" side="LEFT" tickUnit="10.0" upperBound="400" >
                 </NumberAxis>
             </yAxis>
         </StackedBarChart>
