--- a/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
@@ -11,12 +11,12 @@
       fx:controller="ru.nucodelabs.gem.view.cross_section.CrossSectionController">
 
     <AreaChart fx:id="sectionAreaChart" maxWidth="Infinity"
-               maxHeight="Infinity" animated="false">
+               maxHeight="Infinity" animated="false" legendVisible="false">
         <xAxis>
             <NumberAxis fx:id="sectionX" label="Пикеты" side="TOP"/>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="sectionY" label="Слои" side="LEFT"/>
+            <NumberAxis fx:id="sectionY" label="Слои" side="LEFT" />
         </yAxis>
     </AreaChart>
 </VBox>
