--- a/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.AreaChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.chart.AreaChart?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       alignment="CENTER"
       maxHeight="Infinity"
       maxWidth="Infinity"
       VBox.vgrow="ALWAYS"
-      fx:controller="ru.nucodelabs.gem.view.cross_section.CrossSectionController">
+      fx:controller="ru.nucodelabs.gem.view.cross_section.CrossSectionController" stylesheets="@CrossSection.css">
 
     <AreaChart fx:id="sectionAreaChart" maxWidth="Infinity"
                maxHeight="Infinity" animated="false" legendVisible="false">
@@ -16,7 +16,7 @@
             <NumberAxis fx:id="sectionX" label="Пикеты" side="TOP"/>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="sectionY" label="Слои" side="LEFT" />
+            <NumberAxis fx:id="sectionY" label="Слои" side="LEFT"/>
         </yAxis>
     </AreaChart>
 </VBox>
